--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Ropot_AnastasiaContext": "Server=(localdb)\\mssqllocaldb;Database=Ropot_Anastasia.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
